<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    tools:context=".activities.SignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:hint="@string/login_email_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_in"
        android:layout_columnSpan="2"
        android:onClick="signIn"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:layout_columnSpan="2"
        android:onClick="signUp" />

</GridLayout>
